@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2022-07-30T01:00:45Z",
+  "timestamp" : "2022-07-30T08:14:28Z",
   "count_outdated" : 424,
   "uniques_outdated" : 229,
-  "count" : 447,
-  "uniques" : 240,
+  "count" : 448,
+  "uniques" : 241,
   "clones" : [
     {
       "timestamp": "2022-07-20T00:00:00Z",
@@ -72,6 +72,13 @@
       "timestamp": "2022-07-29T00:00:00Z",
       "count": 2,
       "count_minmax": [ 1, 2 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ]
+    },
+    {
+      "timestamp": "2022-07-30T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
     }
